--- a/css/style.css
+++ b/css/style.css
@@ -1952,7 +1952,7 @@ fieldset[disabled] .input-group-btn .btn-default.active {
 }
 
 a.navbar-brand {
-  font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: 'Pokemon Classic';
   font-size: 24px;
   letter-spacing: -.3px;
   font-weight: 600 !important;
