--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,13 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'Pokemon Classic';
+  src: url(fonts/Pokemon_Classic.ttf) format(truetype);
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* Use the following CSS code if you want to use data attributes for inserting your icons */
 [data-icon]:before {
   font-family: 'Flat-UI-Icons';
@@ -330,8 +337,7 @@ p {
   font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 @media (min-width: 768px) {
-  .lead {
-  }
+
 }
 small,
 .small {
@@ -660,7 +666,7 @@ fieldset[disabled] .btn-primary.active {
 .open .dropdown-toggle.btn-info {
   color: #222;
   background-color: #FF9A77;
-  border-color: ##FF9A77;
+  border-color: #FF9A77;
 }
 .btn-info:active,
 .btn-info.active,
@@ -1946,9 +1952,6 @@ fieldset[disabled] .input-group-btn .btn-default.active {
 .navbar-fixed-bottom {
   margin-bottom: 0;
   border-width: 0;
-}
-.navbar-brand {
-
 }
 
 a.navbar-brand {
