--- a/css/font.css
+++ b/css/font.css
@@ -1,8 +1,8 @@
 .custom-title-font{
-  font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: 'Pokemon Classic';
   font-weight: 700;
   color: #222;
-  font-size: 55px;
+  font-size: 40px;
 }
 
 .custom-p-font{
