not sure if best practice but added font family to nes components

--- a/css/general.css
+++ b/css/general.css
@@ -1292,3 +1292,9 @@ div.footer{
 li.social a{
 	margin-right: 3%;
 }
+
+/* Nes components*/
+
+.nes-btn.is-primary {
+	font-family: 'Pokemon Classic';
+}
