--- a/css/cards.css
+++ b/css/cards.css
@@ -95,10 +95,10 @@ h3.title {
 }
 
 h3.title-alt {
-    font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Pokemon Classic';
     font-weight: 700;
     color: #1b2025;
-    font-size: 40px;
+    font-size: 29px;
     text-align: right;
 }
 
