--- a/css/cards.css
+++ b/css/cards.css
@@ -58,8 +58,8 @@ p.work-wrap-text-alt {
     text-align: right;
     margin-top: 10px;
     margin-right: 5px;
-    font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 14px;
+    font-family: 'Pokemon Classic';
+    font-size: 10px;
     font-weight: 600;
     color: #7c82a2;
 }
