--- a/css/style.css
+++ b/css/style.css
@@ -1140,8 +1140,8 @@ input[type="search"] {
   -webkit-appearance: none !important;
 }
 label {
-  font-size: 15px;
-  font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 12px;
+  font-family: 'Pokemon Classic';
 }
 .form-control:-moz-placeholder {
   color: #b2bcc5;
