changed font for buttons

--- a/css/cards.css
+++ b/css/cards.css
@@ -116,7 +116,7 @@ h3.title-alt {
     margin-bottom: 15%;
     height: 50px;
     padding: 16px 32px;
-    font-family: Montserrat,sans-serif;
+    font-family: 'Pokemon Classic';
     font-weight: 600;
     font-size: 11px;
     line-height: 18px;
@@ -130,7 +130,7 @@ h3.title-alt {
     margin-bottom: 15%;
     height: 50px;
     padding: 16px 32px;
-    font-family: Montserrat,sans-serif;
+    font-family: 'Pokemon Classic';
     font-weight: 600;
     font-size: 11px;
     line-height: 18px;
