changed font for my work subtitle in media query

--- a/css/cards.css
+++ b/css/cards.css
@@ -276,8 +276,8 @@ h3.title-alt {
     p.work-wrap-text-alt {
         text-align: center;
         margin-top: 10px;
-        font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 14px;
+        font-family: 'Pokemon Classic';
+        font-size: 10px;
         font-weight: 600;
         color: #7c82a2;
     }
