--- a/css/cards.css
+++ b/css/cards.css
@@ -258,16 +258,16 @@ h3.title-alt {
     }
 
     h3.title {
-        font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-family: 'Pokemon Classic';
         font-weight: 700;
         color: #1b2025;
-        font-size: 40px;
+        font-size: 30px;
         text-align: center;
     }
 
 
     h3.title-alt {
-        font-family: 'Pokemon Classic'
+        font-family: 'Pokemon Classic';
         font-weight: 700;
         color: #1b2025;
         font-size: 30px;
@@ -285,8 +285,8 @@ h3.title-alt {
     p.work-wrap-text {
         text-align: center;
         margin-top: 10px;
-        font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 14px;
+        font-family: 'Pokemon Classic';
+        font-size: 10px;
         font-weight: 600;
         color: #7c82a2;
     }
