created own nes github button

--- a/css/connect.css
+++ b/css/connect.css
@@ -153,3 +153,35 @@ button:focus {
     align-items: center;
     justify-content: center;
   }
+
+  .nes-btn.gh {
+    background-color: #ea6871;
+    width: 200px;
+  }
+
+  .nes-btn.gh::after {
+    position: absolute;
+    top: -4px;
+    right: -4px;
+    bottom: -4px;
+    left: -4px;
+    content: '';
+    box-shadow: inset -4px -4px #a84b54;
+  }
+
+  .nes-btn.gh:hover {
+    text-decoration: none;
+    background-color:  #d95a63;
+  }
+
+  .nes-btn.gh:hover::after {
+    box-shadow: inset -6px -6px #a84b54;
+  }
+
+  .nes-btn.gh:focus {
+    box-shadow: 0 0 0 6px rgba(168, 75, 84, 0.3);
+  }
+
+  .nes-btn.gh:active.nes-btn:active:not(.is-disabled)::after {
+    box-shadow: inset 4px 4px #a84b54;
+  }
