--- a/css/connect.css
+++ b/css/connect.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap');
 
 h3 {
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Pokemon Classic';
+    font-size: 22px;
 }
 
 div.tt {
