--- a/css/cards.css
+++ b/css/cards.css
@@ -111,6 +111,100 @@ h3.title-alt {
 }
 
 /* =============== BUTTONS =============== */
+
+.button-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+button {
+    border-radius: 0;
+    overflow: visible;
+    text-transform: none;
+    -webkit-appearance: button;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    -webkit-appearance: none;
+}
+
+button::-moz-focus-inner {
+    padding: 0;
+    border-style: none;
+}
+
+button:focus {
+    outline: 1px dotted;
+    outline: 5px auto -webkit-focus-ring-color;
+}
+
+.nes-btn {
+    border-style: solid;
+    border-width: 4px;
+    border-image-slice: 2;
+    border-image-width: 2;
+    border-image-repeat: stretch;
+    border-image-source: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8" ?><svg version="1.1" width="5" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2 1 h1 v1 h-1 z M1 2 h1 v1 h-1 z M3 2 h1 v1 h-1 z M2 3 h1 v1 h-1 z" fill="rgb(33,37,41)" /></svg>');
+    border-image-outset: 2;
+    position: relative;
+    display: inline-block;
+    padding: 6px 8px;
+    margin: 4px;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    color: #212529;
+    background-color: #fff;
+    width: 200px;
+  }
+
+  @media all and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
+    .nes-btn {
+      border-image-repeat: space;
+    }
+}
+  
+  @supports (-moz-appearence: meterbar) {
+    .nes-btn {
+      border-image-repeat: stretch;
+    }
+  }
+  
+  .nes-btn::after {
+    position: absolute;
+    top: -4px;
+    right: -4px;
+    bottom: -4px;
+    left: -4px;
+    content: '';
+    box-shadow: inset -4px -4px #adafbc;
+  }
+
+  .nes-btn:hover {
+    color: #212529;
+    text-decoration: none;
+    background-color: #e7e7e7;
+  }
+  
+  .nes-btn:hover::after {
+    box-shadow: inset -6px -6px #adafbc; 
+  }
+  
+  .nes-btn:focus {
+    box-shadow: 0 0 0 6px rgba(173, 175, 188, 0.3);
+    outline: 0;
+  }
+  
+  .nes-btn:active:not(.is-disabled)::after {
+    box-shadow: inset 4px 4px #adafbc;
+  }
+
+  
+
 .btn.btn-talk, .btn.btn-work {
     margin-top: 15%;
     margin-bottom: 15%;
