--- a/css/cards.css
+++ b/css/cards.css
@@ -212,6 +212,8 @@ button:focus {
   .nes-btn.rainbow {
     animation: bt-rainbow 10s infinite;
     color: #fff;
+    margin-top: 7%;
+    width: 180px;
   }
 
   .nes-btn.rainbow::after {
